--- a/css/styles.css
+++ b/css/styles.css
@@ -144,6 +144,8 @@ nav {
 .service {
   margin-top: 2rem;
   transition: 0.5s;
+  padding: 0 1rem;
+  border-radius: 15px;
 }
 
 .service:hover {
@@ -181,6 +183,193 @@ nav {
   background-position: center;
 }
 
+/* Projects Styling */
+#projects {
+  margin: auto;
+  margin-top: 3rem;
+  width: 60%;
+}
+
+.project-container {
+  margin-top: 3rem;
+  display: grid;
+  grid-auto-flow: column;
+  grid-template-columns: 1fr 1fr;
+  gap: 4rem;
+}
+
+.project-img {
+  width: 100%;
+  aspect-ratio: 16/9;
+  border-radius: 15px;
+  object-fit: cover;
+  object-position: top;
+  border: 2px solid #161513;
+}
+
+.project-desc {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.project-desc > * {
+  text-align: left;
+  margin-top: 0;
+}
+
+/* Blog Styling */
+#blog {
+  margin: auto;
+  margin-top: 4rem;
+  width: 60%;
+}
+.blog-container {
+  margin-top: 3rem;
+  display: grid;
+  grid-auto-flow: column;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 4rem;
+}
+
+.article {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  transition: 0.5s;
+  padding: 0 1rem;
+  border-radius: 15px;
+}
+
+.article:hover {
+  scale: 1.1;
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
+}
+
+.article > * {
+  margin-top: 0;
+}
+
+.article-img {
+  width: 100%;
+  aspect-ratio: 1/1;
+  border-radius: 15px;
+  object-fit: cover;
+  object-position: top;
+  border: 2px solid #161513;
+  margin-bottom: 2rem;
+}
+
+/* Testimonials Styling */
+#testimonials {
+  margin: auto;
+  margin-top: 4rem;
+  width: 60%;
+}
+
+.testimonial-container {
+  margin-top: 3rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  gap: 40px 20px;
+}
+
+.testimonial-element {
+  border: 1px solid #161513;
+  border-radius: 15px;
+  padding: 2rem 3rem;
+}
+
+.client-container {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+}
+
+.client-img {
+  width: 50px;
+  aspect-ratio: 1/1;
+  border-radius: 50%;
+  background-color: #161513;
+}
+
+.desc-testimonial {
+  text-align: left;
+}
+
+/* Contact Styling */
+#contact {
+  margin: auto;
+  margin-top: 4rem;
+  width: 60%;
+}
+
+.form {
+  margin: auto;
+  width: 50%;
+}
+.form-group {
+  margin-top: 2rem;
+  display: flex;
+  flex-direction: column;
+}
+.label {
+  font-weight: 600;
+  font-size: 1rem;
+  margin-left: 0.5rem;
+}
+.input {
+  padding: 1rem;
+  border-radius: 15px;
+  border: 1px solid #161513;
+  margin-top: 0.5rem;
+}
+
+#contact-btn {
+  margin-top: 2rem;
+  width: 100%;
+  font-weight: 800;
+  letter-spacing: 2px;
+}
+
+/* Project View Styling */
+
+#project-view {
+  margin: auto;
+  margin-top: 4rem;
+  width: 60%;
+}
+
+.project-view-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  gap: 40px;
+}
+
+.project-view-desc > * {
+  text-align: left;
+}
+
+/* Article View Styling */
+#blog-view {
+  margin: auto;
+  margin-top: 4rem;
+  width: 60%;
+}
+
+.article-view-desc > * {
+  text-align: left;
+}
+
+.article-view-img {
+  width: 100%;
+  height: 300px;
+  border-radius: 15px;
+  background-color: #161513;
+  margin-bottom: 2rem;
+}
 /* footer styling */
 #footer {
   margin-top: 3rem;
