added some animations

--- a/css/styles.css
+++ b/css/styles.css
@@ -108,7 +108,7 @@ nav {
   width: 40%;
   aspect-ratio: 1/1;
   border-radius: 50%;
-  background-color: black;
+  background-color: #161513;
   background-size: cover;
   background-position: center;
 }
